JAMES-3874 LMTP should handle overQuota exceptions